--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "turbo": "^2.3.3",
     "typedoc": "^0.27.2",
     "typescript": "^5.4.5"
+  },
+  "dependencies": {
+    "@coinbase/agentkit": "^0.9.0"
   }
 }
