feat: ignore .turbo directory and remove cached turbo files
- Updated .gitignore to ignore entire .turbo/ directory
- Removed all previously tracked turbo cache files, cookies, and logs
- This prevents turbo build cache from being committed to repository

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ jspm_packages/
 # Optional npm cache directory
 .npm
 
+# Turbo cache directory
+.turbo/
+
 # Optional eslint cache
 .eslintcache
 
