--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,5 +4,4 @@ packages:
   - "create-onchain-agent/templates/*"
   - "!create-onchain-agent/templates/next"
   - "!create-onchain-agent/templates/mcp"
-  - "framework-extensions/*"
-  - "examples/*"
+  - "server"
