--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../tsconfig.base.json",  
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "module": "Node16"
+    "module": "Node16",
+    "moduleResolution": "Node16"
   },
   "include": ["src/**/*.ts"],
   "exclude": ["src/**/*.test.ts"]
