--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@coinbase/agentkit": "^0.9.0"
+    "@coinbase/agentkit": "^0.9.0",
+    "@modelcontextprotocol/sdk": "^1.16.0",
+    "node-fetch": "^3.3.2"
   }
 }
