feat: add Smart MCP Tools with intelligent vector search
Implement intelligent tool discovery and execution for MCP servers to solve
the "hallucination overflow" problem caused by too many tools.

Key Features:
- Vector-based semantic tool search using Pinecone
- Simplified MCP interface with only 2 tools: search_tools and execute_tool
- Compatible with existing AgentKit ActionProvider architecture
- Uses Pinecone built-in embedding models (multilingual-e5-large)
- Supports filtering by provider, network, parameters
- Automatic tool vectorization and indexing

Architecture:
- VectorSearchService: Pinecone integration with built-in embeddings
- SmartToolManager: Core tool management and execution logic
- MCP Integration: Simplified 2-tool interface for AI assistants
- Type-safe with full TypeScript support

Benefits:
- Reduces cognitive load on AI by providing only relevant tools
- Semantic search enables natural language tool discovery
- Maintains backward compatibility with existing MCP tools
- Scalable to hundreds of action providers and thousands of actions

--- a/server/package.json
+++ b/server/package.json
@@ -40,11 +40,15 @@
   ],
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
+    "@pinecone-database/pinecone": "^3.0.0",
+    "reflect-metadata": "^0.1.13",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zod-to-json-schema": "^3.24.3"
   },
   "devDependencies": {
-    "@coinbase/agentkit": "workspace:*"
+    "@coinbase/agentkit": "workspace:*",
+    "@types/uuid": "^9.0.8"
   },
   "peerDependencies": {
     "@coinbase/agentkit": ">=0.1.0"
